Fix #114760: new attribute does not get active for some domains

Problem here is that `BKE_id_attribute_to_index` [which
`BKE_id_attributes_active_set` uses] does not match
`BKE_id_attribute_from_index` which can lead to "wrong" indices (there
are "wrong" layers included while iterating such as ".corner_vert" or
".corner_edge" for faces).

Deeper reason is that `get_domains_types` swaps `ATTR_DOMAIN_FACE` and
`ATTR_DOMAIN_CORNER` (no deeper knowledge what this is for?! -- but
seems dangerous to have in such a "general" looking function like
`BKE_id_attribute_to_index`...

Not wanting to mess with existing behavior too much (mostly used in
color related code), this PR makes the swapping optional and avoids it
from `BKE_id_attributes_active_set`.